[gd_scene load_steps=31 format=3 uid="uid://u1n2cxy7olmc"]

[ext_resource type="PackedScene" uid="uid://c2hauy3xvjbeo" path="res://Scenes/Objects/Field.tscn" id="1_x55hg"]
[ext_resource type="Script" path="res://Scripts/Sun.gd" id="2_f5c1b"]
[ext_resource type="PackedScene" uid="uid://2iqlbfxjg4i5" path="res://Scenes/GUI.tscn" id="3_sw4x6"]
[ext_resource type="Script" path="res://Scripts/GUI.gd" id="4_aqcwx"]
[ext_resource type="Texture2D" uid="uid://dt27pqtr7jgvm" path="res://ASSETS/Sprites/Noise/frame_00_delay-0.05s.png" id="5_lcmmd"]
[ext_resource type="Texture2D" uid="uid://1wdr84hep0wr" path="res://ASSETS/Sprites/Noise/frame_01_delay-0.05s.png" id="6_7j1v5"]
[ext_resource type="Texture2D" uid="uid://dwuj52uvau7tj" path="res://ASSETS/Sprites/Noise/frame_02_delay-0.05s.png" id="7_l2hrh"]
[ext_resource type="Texture2D" uid="uid://cfwtonfqmb55q" path="res://ASSETS/Sprites/Noise/frame_03_delay-0.05s.png" id="8_dqpye"]
[ext_resource type="Texture2D" uid="uid://80b7hn4pkvv7" path="res://ASSETS/Sprites/Noise/frame_04_delay-0.05s.png" id="9_o1us2"]
[ext_resource type="Texture2D" uid="uid://ddk412tn6lutc" path="res://ASSETS/Sprites/Noise/frame_05_delay-0.05s.png" id="10_upemf"]
[ext_resource type="Texture2D" uid="uid://c5p27uv8kp3m6" path="res://ASSETS/Sprites/Noise/frame_06_delay-0.05s.png" id="11_e7q74"]
[ext_resource type="Texture2D" uid="uid://bof8viofv8aju" path="res://ASSETS/Sprites/Noise/frame_07_delay-0.05s.png" id="12_fgnu0"]
[ext_resource type="Texture2D" uid="uid://bxqbp05j8p4lx" path="res://ASSETS/Sprites/Noise/frame_08_delay-0.05s.png" id="13_tfqdt"]
[ext_resource type="Texture2D" uid="uid://dv6s5bq28c053" path="res://ASSETS/Sprites/Noise/frame_09_delay-0.05s.png" id="14_qfcp8"]
[ext_resource type="PackedScene" uid="uid://bmgklxbqopduw" path="res://Scenes/Objects/GameManager.tscn" id="15_l2tln"]
[ext_resource type="Script" path="res://Scripts/GameManagerIngame.gd" id="16_e0jbr"]
[ext_resource type="FontFile" uid="uid://clfu1jp4jt0xx" path="res://ASSETS/Fonts/Microserif.ttf" id="17_mkk8o"]
[ext_resource type="Script" path="res://Scripts/TutorialManager.gd" id="18_y63gp"]
[ext_resource type="AudioStream" uid="uid://b4nl4ompfkwki" path="res://Sound/snd_death.mp3" id="19_ppnsw"]
[ext_resource type="AudioStream" uid="uid://c76iv1sula8lg" path="res://Sound/snd_night.mp3" id="20_ip37n"]
[ext_resource type="AudioStream" uid="uid://qhdhk3t1wbih" path="res://Sound/snd_food.mp3" id="21_s1r8u"]
[ext_resource type="AudioStream" uid="uid://8f1rnfsm1rll" path="res://Sound/snd_level_complete.mp3" id="22_q2qpb"]

[sub_resource type="Environment" id="Environment_4rtgn"]
background_mode = 3
background_color = Color(0.286275, 0.486275, 0.509804, 1)
tonemap_mode = 2
tonemap_exposure = 1.49
tonemap_white = 3.05
glow_enabled = true
glow_intensity = 1.85
glow_strength = 0.69
glow_bloom = 0.3
glow_blend_mode = 1
glow_hdr_threshold = 0.01
fog_light_color = Color(0.858824, 0, 0.956863, 1)
fog_light_energy = 10.7
fog_sun_scatter = 1.0
fog_density = 1.3715
fog_height = 20.6
volumetric_fog_density = 1.0
volumetric_fog_albedo = Color(1, 0, 0.298039, 1)
volumetric_fog_emission_energy = 1024.0
volumetric_fog_gi_inject = 0.0
adjustment_enabled = true
adjustment_contrast = 0.94
adjustment_saturation = 1.42

[sub_resource type="Curve" id="Curve_hatyc"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.503226, 0.221005), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_83i50"]
curve = SubResource("Curve_hatyc")

[sub_resource type="Curve" id="Curve_ctabu"]
max_value = 3.0
_data = [Vector2(0, 0.135309), 0.0, 0.0, 0, 0, Vector2(1, 1.8692), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_5vurk"]
curve = SubResource("Curve_ctabu")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_5my7r"]
particle_flag_disable_z = true
emission_shape_scale = Vector3(6.71, 7.755, 1)
emission_shape = 1
emission_sphere_radius = 128.0
orbit_velocity_min = -0.04
orbit_velocity_max = 0.04
gravity = Vector3(2.08165e-12, 2.08165e-12, 2.08165e-12)
radial_accel_min = 2.08167e-15
radial_accel_max = 2.08167e-15
scale_max = 3.0
scale_over_velocity_curve = SubResource("CurveTexture_5vurk")
alpha_curve = SubResource("CurveTexture_83i50")

[sub_resource type="SpriteFrames" id="SpriteFrames_dwic7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_lcmmd")
}, {
"duration": 1.0,
"texture": ExtResource("6_7j1v5")
}, {
"duration": 1.0,
"texture": ExtResource("7_l2hrh")
}, {
"duration": 1.0,
"texture": ExtResource("8_dqpye")
}, {
"duration": 1.0,
"texture": ExtResource("9_o1us2")
}, {
"duration": 1.0,
"texture": ExtResource("10_upemf")
}, {
"duration": 1.0,
"texture": ExtResource("11_e7q74")
}, {
"duration": 1.0,
"texture": ExtResource("12_fgnu0")
}, {
"duration": 1.0,
"texture": ExtResource("13_tfqdt")
}, {
"duration": 1.0,
"texture": ExtResource("14_qfcp8")
}],
"loop": true,
"name": &"noise",
"speed": 12.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_dsiiw"]
font = ExtResource("17_mkk8o")
font_size = 45

[node name="TutorialScene" type="Node2D"]

[node name="Field" parent="." instance=ExtResource("1_x55hg")]

[node name="Sun" type="DirectionalLight2D" parent="."]
position = Vector2(0, -128)
rotation = 1.0472
color = Color(1, 0.670588, 0.545098, 1)
shadow_color = Color(1, 0.239216, 0.780392, 0)
shadow_filter = 1
script = ExtResource("2_f5c1b")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_4rtgn")

[node name="GUI" parent="." instance=ExtResource("3_sw4x6")]
offset_top = 736.0
offset_bottom = 736.0
script = ExtResource("4_aqcwx")

[node name="BGColor" type="ColorRect" parent="."]
z_index = -3
offset_right = 1280.0
offset_bottom = 960.0
mouse_filter = 2
color = Color(0.0235294, 0.00784314, 0, 1)

[node name="BGParticles" type="GPUParticles2D" parent="."]
position = Vector2(640, 448)
amount = 200
process_material = SubResource("ParticleProcessMaterial_5my7r")
lifetime = 4.0
preprocess = 2.0
fixed_fps = 60
trail_lifetime = 2.14
trail_sections = 12
trail_section_subdivisions = 8

[node name="Noise" type="AnimatedSprite2D" parent="."]
modulate = Color(0.00784314, 0.00784314, 0.00784314, 1)
z_index = -4
position = Vector2(640, 480)
scale = Vector2(2.13333, 2.4)
sprite_frames = SubResource("SpriteFrames_dwic7")
animation = &"noise"
frame_progress = 0.515472

[node name="GameManager" parent="." instance=ExtResource("15_l2tln")]
position = Vector2(43, -34)
script = ExtResource("16_e0jbr")

[node name="TutorialRect" type="ColorRect" parent="."]
z_index = 2
offset_right = 1280.0
offset_bottom = 960.0
color = Color(0, 0, 0, 0.709804)

[node name="TutorialText" type="Label" parent="."]
z_index = 3
offset_left = 192.0
offset_top = 336.0
offset_right = 1088.0
offset_bottom = 623.0
text = "Welcome to Field Trip!
You are a swarm of insects. Use the highlighted boxes to move around.

> Click to continue <"
label_settings = SubResource("LabelSettings_dsiiw")
horizontal_alignment = 1
autowrap_mode = 2

[node name="TutorialManager" type="Node2D" parent="."]
script = ExtResource("18_y63gp")

[node name="AudioDeath" type="AudioStreamPlayer" parent="."]
stream = ExtResource("19_ppnsw")

[node name="AudioNight" type="AudioStreamPlayer" parent="."]
stream = ExtResource("20_ip37n")
volume_db = -14.158

[node name="AudioFood" type="AudioStreamPlayer" parent="."]
stream = ExtResource("21_s1r8u")
volume_db = -7.623

[node name="AudioLvlComplete" type="AudioStreamPlayer" parent="."]
stream = ExtResource("22_q2qpb")
volume_db = -20.147
